; ModuleID = '/home/carl/AnghaBench/lab/engine/code/qcommon/extr_cvar.c_Cvar_Print_f.c'
source_filename = "/home/carl/AnghaBench/lab/engine/code/qcommon/extr_cvar.c_Cvar_Print_f.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [25 x i8] c"usage: print <variable>\0A\00", align 1
@.str.1 = private unnamed_addr constant [25 x i8] c"Cvar %s does not exist.\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @Cvar_Print_f() #0 {
  %1 = alloca i8*, align 8
  %2 = alloca i32*, align 8
  %3 = call i32 (...) @Cmd_Argc()
  %4 = icmp ne i32 %3, 2
  br i1 %4, label %5, label %7

5:                                                ; preds = %0
  %6 = call i32 (i8*, ...) @Com_Printf(i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str, i64 0, i64 0))
  br label %19

7:                                                ; preds = %0
  %8 = call i8* @Cmd_Argv(i32 1)
  store i8* %8, i8** %1, align 8
  %9 = load i8*, i8** %1, align 8
  %10 = call i32* @Cvar_FindVar(i8* %9)
  store i32* %10, i32** %2, align 8
  %11 = load i32*, i32** %2, align 8
  %12 = icmp ne i32* %11, null
  br i1 %12, label %13, label %16

13:                                               ; preds = %7
  %14 = load i32*, i32** %2, align 8
  %15 = call i32 @Cvar_Print(i32* %14)
  br label %19

16:                                               ; preds = %7
  %17 = load i8*, i8** %1, align 8
  %18 = call i32 (i8*, ...) @Com_Printf(i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str.1, i64 0, i64 0), i8* %17)
  br label %19

19:                                               ; preds = %5, %16, %13
  ret void
}

declare dso_local i32 @Cmd_Argc(...) #1

declare dso_local i32 @Com_Printf(i8*, ...) #1

declare dso_local i8* @Cmd_Argv(i32) #1

declare dso_local i32* @Cvar_FindVar(i8*) #1

declare dso_local i32 @Cvar_Print(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
